Fix up alignment of columns

--- a/client/extensions/woocommerce/app/order/style.scss
+++ b/client/extensions/woocommerce/app/order/style.scss
@@ -139,7 +139,7 @@
 		align-items: center;
 
 		.order__details-totals-label {
-			flex: 1 0 calc( 100% - 204px );
+			flex: 1 0 calc( 100% - 104px );
 		}
 
 		.order__details-totals-tax,
@@ -148,18 +148,33 @@
 		}
 	}
 
-	.order__details-total-refund {
-		color: $alert-red;
+	&.is-refund-modal,
+	&.has-taxes {
+		.order__details-total-discount,
+		.order__details-total-refund,
+		.order__details-total-shipping,
+		.order__details-total-shipping-refund,
+		.order__details-total {
+			.order__details-totals-label {
+				flex: 1 0 calc( 100% - 204px );
+			}
+		}
+	}
+
+	&.has-taxes {
+		.order__details-total-shipping-refund .order__details-totals-value {
+			flex: 1 0 192px;
+		}
 	}
 
 	.order__details-total-shipping-refund {
-		.order__details-totals-value {
-			flex: 1 0 192px;
-		}
-
 		.form-text-input-with-affixes {
 			width: 130px;
 		}
+	}
+
+	.order__details-total-refund {
+		color: $alert-red;
 	}
 
 	& > div:last-child {
